--- a/demos/index.html
+++ b/demos/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery, image cropping, web development">
     <meta name="author" content="Fengyuan Chen">
     <title>Demo - Cropper</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../src/cropper.css">
     <style>
         .eg-container {
@@ -173,7 +173,7 @@
     </div>
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="../src/cropper.js"></script>
     <script>
         $(function() {
