Comb HTML attributes

--- a/demos/index.html
+++ b/demos/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A basic example of Cropper.">
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery, image cropping, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Cropper</title>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../src/cropper.css">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../src/cropper.css" rel="stylesheet">
   <style>
     .eg-container {
       padding-top: 15px;
@@ -144,17 +144,17 @@
     </div>
     <div class="clearfix">
       <div class="eg-button">
-        <button id="reset" type="button" class="btn btn-warning">Reset</button>
-        <button id="reset2" type="button" class="btn  btn-warning">Reset (deep)</button>
-        <button id="clear" type="button" class="btn btn-primary">Clear</button>
-        <button id="destroy" type="button" class="btn btn-danger">Destroy</button>
-        <button id="enable" type="button" class="btn btn-success">Enable</button>
-        <button id="disable" type="button" class="btn btn-warning">Disable</button>
-        <button id="zoomIn" type="button" class="btn btn-info">Zoom In</button>
-        <button id="zoomOut" type="button" class="btn btn-info">Zoom Out</button>
-        <button id="rotateLeft" type="button" class="btn btn-info">Rotate Left</button>
-        <button id="rotateRight" type="button" class="btn btn-info">Rotate Right</button>
-        <button id="setData" type="button" class="btn btn-primary">Set Data</button>
+        <button class="btn btn-warning" id="reset" type="button">Reset</button>
+        <button class="btn  btn-warning" id="reset2" type="button">Reset (deep)</button>
+        <button class="btn btn-primary" id="clear" type="button">Clear</button>
+        <button class="btn btn-danger" id="destroy" type="button">Destroy</button>
+        <button class="btn btn-success" id="enable" type="button">Enable</button>
+        <button class="btn btn-warning" id="disable" type="button">Disable</button>
+        <button class="btn btn-info" id="zoomIn" type="button">Zoom In</button>
+        <button class="btn btn-info" id="zoomOut" type="button">Zoom Out</button>
+        <button class="btn btn-info" id="rotateLeft" type="button">Rotate Left</button>
+        <button class="btn btn-info" id="rotateRight" type="button">Rotate Right</button>
+        <button class="btn btn-primary" id="setData" type="button">Set Data</button>
       </div>
       <div class="row eg-input">
         <div class="col-md-6">
