#119: Add "checkImageOrigin" option.

--- a/demos/index.html
+++ b/demos/index.html
@@ -241,15 +241,16 @@
         },
         preview: ".preview",
 
-        // multiple: FALSE,
-        // autoCrop: TRUE,
-        // dragCrop: TRUE,
-        // dashed: TRUE,
-        // modal: TRUE,
-        // movable: TRUE,
-        // resizable: TRUE,
-        // zoomable: TRUE,
-        // rotatable: TRUE,
+        // multiple: true,
+        // autoCrop: false,
+        // dragCrop: false,
+        // dashed: false,
+        // modal: false,
+        // movable: false,
+        // resizable: false,
+        // zoomable: false,
+        // rotatable: false,
+        // checkImageOrigin: false,
 
         // maxWidth: 480,
         // maxHeight: 270,
