--- a/demos/index.html
+++ b/demos/index.html
@@ -8,95 +8,16 @@
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery, image cropping, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Cropper</title>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="../src/cropper.css" rel="stylesheet">
-  <style>
-    .eg-container {
-      padding-top: 15px;
-      padding-bottom: 15px;
-    }
+  <link href="css/docs.css" rel="stylesheet">
 
-    .eg-main {
-      max-height: 480px;
-      margin-bottom: 30px;
-    }
-
-    .eg-wrapper {
-      background-color: #f7f7f7;
-      border: 1px solid #eee;
-      box-shadow: inset 0 0 3px #f7f7f7;
-      height: 480px;
-      width: 100%;
-      overflow: hidden;
-    }
-
-    .eg-wrapper img {
-      width: 100%;
-    }
-
-    .eg-preview {
-      margin-bottom: 15px;
-    }
-
-    .preview {
-      float: left;
-      margin-right: 15px;
-      margin-bottom: 15px;
-      overflow: hidden;
-      background: #f7f7f7;
-    }
-
-    .preview-lg {
-      width: 290px;
-      height: 160px;
-    }
-
-    .preview-md {
-      width: 145px;
-      height: 90px;
-    }
-
-    .preview-sm {
-      width: 72.5px;
-      height: 45px;
-    }
-
-    .preview-xs {
-      width: 36.25px;
-      height: 22.5px;
-    }
-
-    .eg-data {
-      padding-right: 15px;
-    }
-
-    .eg-data .input-group {
-      width: 100%;
-      margin-bottom: 15px;
-    }
-
-    .eg-data .input-group-addon {
-      min-width: 65px;
-    }
-
-    .eg-button > .btn {
-      margin-right: 15px;
-      margin-bottom: 15px;
-    }
-
-    .eg-input .input-group {
-      margin-bottom: 15px;
-    }
-
-    .eg-output .btn {
-      margin-right: 15px;
-      margin-bottom: 15px;
-    }
-
-    .eg-output img {
-      max-height: 214px;
-    }
-  </style>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
   <div class="container-fluid eg-container" id="basic-example">
@@ -217,196 +138,9 @@
     </div>
   </div>
 
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="../src/cropper.js"></script>
-  <script>
-    $(function() {
-      var $image = $(".cropper"),
-          $dataX = $("#dataX"),
-          $dataY = $("#dataY"),
-          $dataHeight = $("#dataHeight"),
-          $dataWidth = $("#dataWidth"),
-          console = window.console || {log:$.noop},
-          cropper;
-
-      $image.cropper({
-        aspectRatio: 16 / 9,
-        // autoCropArea: 1,
-        data: {
-          x: 420,
-          y: 50,
-          width: 640,
-          height: 360
-        },
-        preview: ".preview",
-
-        // multiple: true,
-        // autoCrop: false,
-        // dragCrop: false,
-        // dashed: false,
-        // modal: false,
-        // movable: false,
-        // resizable: false,
-        // zoomable: false,
-        // rotatable: false,
-        // checkImageOrigin: false,
-
-        // maxWidth: 480,
-        // maxHeight: 270,
-        // minWidth: 160,
-        // minHeight: 90,
-
-        done: function(data) {
-          $dataX.val(data.x);
-          $dataY.val(data.y);
-          $dataHeight.val(data.height);
-          $dataWidth.val(data.width);
-        },
-
-        build: function(e) {
-          console.log(e.type);
-        },
-
-        built: function(e) {
-          console.log(e.type);
-        },
-
-        dragstart: function(e) {
-          console.log(e.type);
-        },
-
-        dragmove: function(e) {
-          console.log(e.type);
-        },
-
-        dragend: function(e) {
-          console.log(e.type);
-        }
-      });
-
-      cropper = $image.data("cropper");
-
-      $image.on({
-        "build.cropper": function(e) {
-          console.log(e.type);
-          // e.preventDefault();
-        },
-        "built.cropper": function(e) {
-          console.log(e.type);
-          // e.preventDefault();
-        },
-        "dragstart.cropper": function(e) {
-          console.log(e.type);
-          // e.preventDefault();
-        },
-        "dragmove.cropper": function(e) {
-          console.log(e.type);
-          // e.preventDefault();
-        },
-        "dragend.cropper": function(e) {
-          console.log(e.type);
-          // e.preventDefault();
-        }
-      });
-
-      $("#reset").click(function() {
-        $image.cropper("reset");
-      });
-
-      $("#reset2").click(function() {
-        $image.cropper("reset", true);
-      });
-
-      $("#clear").click(function() {
-        $image.cropper("clear");
-      });
-
-      $("#destroy").click(function() {
-        $image.cropper("destroy");
-      });
-
-      $("#enable").click(function() {
-        $image.cropper("enable");
-      });
-
-      $("#disable").click(function() {
-        $image.cropper("disable");
-      });
-
-      $("#zoom").click(function() {
-        $image.cropper("zoom", $("#zoomWith").val());
-      });
-
-      $("#zoomIn").click(function() {
-        $image.cropper("zoom", 0.1);
-      });
-
-      $("#zoomOut").click(function() {
-        $image.cropper("zoom", -0.1);
-      });
-
-      $("#rotate").click(function() {
-        $image.cropper("rotate", $("#rotateWith").val());
-      });
-
-      $("#rotateLeft").click(function() {
-        $image.cropper("rotate", -90);
-      });
-
-      $("#rotateRight").click(function() {
-        $image.cropper("rotate", 90);
-      });
-
-      $("#setAspectRatio").click(function() {
-        $image.cropper("setAspectRatio", $("#aspectRatio").val());
-      });
-
-      $("#replace").click(function() {
-        $image.cropper("replace", $("#replaceWith").val());
-      });
-
-      $("#getImageData").click(function() {
-        $("#showImageData").val(JSON.stringify($image.cropper("getImageData")));
-      });
-
-      $("#setData").click(function() {
-        $image.cropper("setData", {
-          x: $dataX.val(),
-          y: $dataY.val(),
-          width: $dataWidth.val(),
-          height: $dataHeight.val()
-        });
-      });
-
-      $("#getData").click(function() {
-        $("#showData").val(JSON.stringify($image.cropper("getData")));
-      });
-
-      $("#getDataURL").click(function() {
-        var dataURL = $image.cropper("getDataURL");
-
-        $("#dataURL").text(dataURL);
-        $("#showDataURL").html('<img src="' + dataURL + '">');
-      });
-
-      $("#getDataURL2").click(function() {
-        var dataURL = $image.cropper("getDataURL", "image/jpeg");
-
-        $("#dataURL").text(dataURL);
-        $("#showDataURL").html('<img src="' + dataURL + '">');
-      });
-
-      $("#getDataURL3").click(function() {
-        var dataURL = $image.cropper("getDataURL", {
-          width: 160,
-          height: 90
-        });
-
-        $("#dataURL").text(dataURL);
-        $("#showDataURL").html('<img src="' + dataURL + '">');
-      });
-    });
-  </script>
+  <script src="js/docs.js"></script>
 </body>
 </html>
