--- a/demos/index.html
+++ b/demos/index.html
@@ -84,6 +84,9 @@
               <button class="btn btn-info" id="getData" type="button">Get Data</button>
             </span>
             <input class="form-control" id="showData" type="text">
+            <span class="input-group-btn">
+              <button class="btn btn-info" id="getData2" type="button">Get Data (Rounded)</button>
+            </span>
           </div>
           <div class="input-group">
             <span class="input-group-btn">
