--- a/demos/index.html
+++ b/demos/index.html
@@ -76,6 +76,10 @@
         <button class="btn btn-info" id="rotateLeft" type="button">Rotate Left</button>
         <button class="btn btn-info" id="rotateRight" type="button">Rotate Right</button>
         <button class="btn btn-primary" id="setData" type="button">Set Data</button>
+        <label class="btn btn-primary" for="inputImage" title="Upload image file">
+          <input class="hide" id="inputImage" name="file" type="file" accept="image/*">
+          Upload
+        </label>
       </div>
       <div class="row eg-input">
         <div class="col-md-6">
