--- a/demos/index.html
+++ b/demos/index.html
@@ -24,7 +24,7 @@
     <div class="row eg-main">
       <div class="col-xs-12 col-sm-9">
         <div class="eg-wrapper">
-          <img class="cropper" src="img/picture-1.jpg" alt="Picture">
+          <img class="cropper" src="https://avatars1.githubusercontent.com/u/3456749?v=3&s=460" alt="Picture">
         </div>
       </div>
       <div class="col-xs-12 col-sm-3">
