--- a/examples/crop-avatar/index.html
+++ b/examples/crop-avatar/index.html
@@ -1,16 +1,16 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A complete example of Cropper.">
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery, PHP, image cropping, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Crop Avatar - Cropper</title>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="../../dist/cropper.min.css" rel="stylesheet">
-  <link href="css/crop-avatar.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="container" id="crop-avatar">
@@ -24,7 +24,7 @@
     <div class="modal fade" id="avatar-modal" aria-hidden="true" aria-labelledby="avatar-modal-label" role="dialog" tabindex="-1">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
-          <form class="avatar-form" action="crop-avatar.php" enctype="multipart/form-data" method="post">
+          <form class="avatar-form" action="crop.php" enctype="multipart/form-data" method="post">
             <div class="modal-header">
               <button class="close" data-dismiss="modal" type="button">&times;</button>
               <h4 class="modal-title" id="avatar-modal-label">Change Avatar</h4>
@@ -51,12 +51,31 @@
                     <div class="avatar-preview preview-sm"></div>
                   </div>
                 </div>
+
+                <div class="row avatar-btns">
+                  <div class="col-md-9">
+                    <div class="btn-group">
+                      <button class="btn btn-primary" data-method="rotate" data-option="-90" type="button" title="Rotate -90 degrees">Rotate Left</button>
+                      <button class="btn btn-primary" data-method="rotate" data-option="-15" type="button">-15deg</button>
+                      <button class="btn btn-primary" data-method="rotate" data-option="-30" type="button">-30deg</button>
+                      <button class="btn btn-primary" data-method="rotate" data-option="-45" type="button">-45deg</button>
+                    </div>
+                    <div class="btn-group">
+                      <button class="btn btn-primary" data-method="rotate" data-option="90" type="button" title="Rotate 90 degrees">Rotate Right</button>
+                      <button class="btn btn-primary" data-method="rotate" data-option="15" type="button">15deg</button>
+                      <button class="btn btn-primary" data-method="rotate" data-option="30" type="button">30deg</button>
+                      <button class="btn btn-primary" data-method="rotate" data-option="45" type="button">45deg</button>
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <button class="btn btn-primary btn-block avatar-save" type="submit">Done</button>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
               <button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
-              <button class="btn btn-primary avatar-save" type="submit">Save</button>
-            </div>
+            </div> -->
           </form>
         </div>
       </div>
@@ -66,9 +85,9 @@
     <div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
   </div>
 
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="../../assets/js/jquery.min.js"></script>
+  <script src="../../assets/js/bootstrap.min.js"></script>
   <script src="../../dist/cropper.min.js"></script>
-  <script src="js/crop-avatar.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
