--- a/demos/index.html
+++ b/demos/index.html
@@ -160,7 +160,7 @@
           </button>
         </div>
 
-        <div class="btn-group">
+        <div class="btn-group btn-group-crop">
           <button class="btn btn-primary" data-method="getDataURL" type="button">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;getDataURL&quot;)">
               Get Data URL
