--- a/tests/methods.html
+++ b/tests/methods.html
@@ -30,6 +30,7 @@
   <script src="methods/getCropBoxData.js"></script>
   <script src="methods/setCropBoxData.js"></script>
   <script src="methods/getDataURL.js"></script>
+  <script src="methods/getBlob.js"></script>
   <script src="methods/setDragMode.js"></script>
 </body>
 </html>
