--- a/tests/methods.html
+++ b/tests/methods.html
@@ -29,6 +29,7 @@
   <script src="methods/setImageData.js"></script>
   <script src="methods/getCropBoxData.js"></script>
   <script src="methods/setCropBoxData.js"></script>
+  <script src="methods/getCroppedCanvas.js"></script>
   <script src="methods/getDataURL.js"></script>
   <script src="methods/getBlob.js"></script>
   <script src="methods/setDragMode.js"></script>
