--- a/test/options.html
+++ b/test/options.html
@@ -16,22 +16,23 @@
   <script src="js/main.js"></script>
   <script src="options/aspectRatio.js"></script>
   <script src="options/crop.js"></script>
-  <script src="options/minCropBoxWidth.js"></script>
-  <script src="options/minCropBoxHeight.js"></script>
-  <script src="options/minContainerWidth.js"></script>
-  <script src="options/minContainerHeight.js"></script>
-  <script src="options/mouseWheelZoom.js"></script>
-  <script src="options/touchDragZoom.js"></script>
+  <script src="options/strict.js"></script>
+  <script src="options/checkImageOrigin.js"></script>
   <script src="options/background.js"></script>
   <script src="options/guides.js"></script>
   <script src="options/highlight.js"></script>
   <script src="options/modal.js"></script>
-  <script src="options/rotatable.js"></script>
-  <script src="options/zoomable.js"></script>
-  <script src="options/resizable.js"></script>
-  <script src="options/movable.js"></script>
   <script src="options/autoCrop.js"></script>
   <script src="options/dragCrop.js"></script>
-  <script src="options/checkImageOrigin.js"></script>
+  <script src="options/movable.js"></script>
+  <script src="options/resizable.js"></script>
+  <script src="options/rotatable.js"></script>
+  <script src="options/zoomable.js"></script>
+  <script src="options/mouseWheelZoom.js"></script>
+  <script src="options/touchDragZoom.js"></script>
+  <script src="options/minCropBoxWidth.js"></script>
+  <script src="options/minCropBoxHeight.js"></script>
+  <script src="options/minContainerWidth.js"></script>
+  <script src="options/minContainerHeight.js"></script>
 </body>
 </html>
