"flip image" method, demo/doc toolbar buttons, readme.dm doc and qunit test

--- a/test/methods.html
+++ b/test/methods.html
@@ -24,6 +24,7 @@
   <script src="methods/disable.js"></script>
   <script src="methods/zoom.js"></script>
   <script src="methods/rotate.js"></script>
+  <script src="methods/flip.js"></script>
   <script src="methods/getData.js"></script>
   <script src="methods/getImageData.js"></script>
   <script src="methods/setImageData.js"></script>
