Added minCanvasWidth/Height test

--- a/test/options.html
+++ b/test/options.html
@@ -30,6 +30,8 @@
   <script src="options/zoomable.js"></script>
   <script src="options/mouseWheelZoom.js"></script>
   <script src="options/touchDragZoom.js"></script>
+  <script src="options/minCanvasWidth.js"></script>
+  <script src="options/minCanvasHeight.js"></script>
   <script src="options/minCropBoxWidth.js"></script>
   <script src="options/minCropBoxHeight.js"></script>
   <script src="options/minContainerWidth.js"></script>
