Remove cross origin test to avoid PhantomJS error

--- a/test/options.html
+++ b/test/options.html
@@ -17,7 +17,7 @@
   <script src="options/aspectRatio.js"></script>
   <script src="options/crop.js"></script>
   <script src="options/strict.js"></script>
-  <script src="options/checkImageOrigin.js"></script>
+  <!-- <script src="options/checkImageOrigin.js"></script> -->
   <script src="options/background.js"></script>
   <script src="options/guides.js"></script>
   <script src="options/highlight.js"></script>
