Created failing tests for setData method
This is a copy of the setCropBoxData test, but using getData/setData.
setData does not yet exist, but this tests use of getData (which already
has tests) should ensure they match up.

FB Case 17121
GH Issue #290

--- a/test/methods.html
+++ b/test/methods.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -25,6 +25,7 @@
   <script src="methods/zoom.js"></script>
   <script src="methods/rotate.js"></script>
   <script src="methods/getData.js"></script>
+  <script src="methods/setData.js"></script>
   <script src="methods/getImageData.js"></script>
   <script src="methods/getCropBoxData.js"></script>
   <script src="methods/setCropBoxData.js"></script>
