Added setData button to demo page
FB Case 17121
GH Issue #290

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -198,6 +198,11 @@
           <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;getData&quot;)">
             Get Data
           </span>
+        </button>
+        <button class="btn btn-primary" data-method="setData" data-target="#putData" type="button">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;setData&quot;, data)">
+                Set Data
+            </span>
         </button>
         <button class="btn btn-primary" data-method="getImageData" data-option="" data-target="#putData" type="button">
           <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;getImageData&quot;)">
