Add test for "crop" method

--- a/test/methods.html
+++ b/test/methods.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -17,6 +17,7 @@
   <script src="methods/destroy.js"></script>
   <script src="methods/move.js"></script>
   <script src="methods/setAspectRatio.js"></script>
+  <script src="methods/crop.js"></script>
   <script src="methods/reset.js"></script>
   <script src="methods/clear.js"></script>
   <script src="methods/replace.js"></script>
