--- a/examples/crop-avatar/index.html
+++ b/examples/crop-avatar/index.html
@@ -11,6 +11,12 @@
   <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="../../dist/cropper.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
   <div class="container" id="crop-avatar">
