Add test to "change" event

--- a/test/events.html
+++ b/test/events.html
@@ -19,5 +19,6 @@
   <script src="events/dragstart.js"></script>
   <script src="events/dragmove.js"></script>
   <script src="events/dragend.js"></script>
+  <script src="events/change.js"></script>
 </body>
 </html>
