Update options tests

--- a/test/options.html
+++ b/test/options.html
@@ -26,11 +26,13 @@
   <script src="options/autoCrop.js"></script>
   <script src="options/dragCrop.js"></script>
   <script src="options/movable.js"></script>
-  <script src="options/resizable.js"></script>
   <script src="options/rotatable.js"></script>
   <script src="options/zoomable.js"></script>
   <script src="options/mouseWheelZoom.js"></script>
   <script src="options/touchDragZoom.js"></script>
+  <script src="options/cropBoxMovable.js"></script>
+  <script src="options/cropBoxResizable.js"></script>
+  <script src="options/doubleClickToggle.js"></script>
   <script src="options/minCanvasWidth.js"></script>
   <script src="options/minCanvasHeight.js"></script>
   <script src="options/minCropBoxWidth.js"></script>
