--- a/demo/index.html
+++ b/demo/index.html
@@ -348,12 +348,6 @@
             </li>
             <li role="presentation">
               <label class="checkbox-inline">
-                <input type="checkbox" name="option" value="resizable" checked>
-                resizable
-              </label>
-            </li>
-            <li role="presentation">
-              <label class="checkbox-inline">
                 <input type="checkbox" name="option" value="rotatable" checked>
                 rotatable
               </label>
@@ -374,6 +368,24 @@
               <label class="checkbox-inline">
                 <input type="checkbox" name="option" value="mouseWheelZoom" checked>
                 mouseWheelZoom
+              </label>
+            </li>
+            <li role="presentation">
+              <label class="checkbox-inline">
+                <input type="checkbox" name="option" value="cropBoxMovable" checked>
+                cropBoxMovable
+              </label>
+            </li>
+            <li role="presentation">
+              <label class="checkbox-inline">
+                <input type="checkbox" name="option" value="cropBoxResizable" checked>
+                cropBoxResizable
+              </label>
+            </li>
+            <li role="presentation">
+              <label class="checkbox-inline">
+                <input type="checkbox" name="option" value="doubleClickToggle" checked>
+                doubleClickToggle
               </label>
             </li>
           </ul>
