--- a/test/options.html
+++ b/test/options.html
@@ -21,6 +21,7 @@
   <!-- <script src="options/checkImageOrigin.js"></script> -->
   <script src="options/background.js"></script>
   <script src="options/guides.js"></script>
+  <script src="options/center.js"></script>
   <script src="options/highlight.js"></script>
   <script src="options/modal.js"></script>
   <script src="options/autoCrop.js"></script>
