--- a/demo/index.html
+++ b/demo/index.html
@@ -317,6 +317,12 @@
             </li>
             <li role="presentation">
               <label class="checkbox-inline">
+                <input type="checkbox" name="option" value="center" checked>
+                center
+              </label>
+            </li>
+            <li role="presentation">
+              <label class="checkbox-inline">
                 <input type="checkbox" name="option" value="highlight" checked>
                 highlight
               </label>
