Update the tests of events

--- a/test/events.html
+++ b/test/events.html
@@ -16,9 +16,10 @@
   <script src="js/main.js"></script>
   <script src="events/build.js"></script>
   <script src="events/built.js"></script>
-  <script src="events/dragstart.js"></script>
-  <script src="events/dragmove.js"></script>
-  <script src="events/dragend.js"></script>
+  <script src="events/cropstart.js"></script>
+  <script src="events/cropmove.js"></script>
+  <script src="events/cropend.js"></script>
   <script src="events/change.js"></script>
+  <script src="events/zoom.js"></script>
 </body>
 </html>
