--- a/test/events.html
+++ b/test/events.html
@@ -19,7 +19,7 @@
   <script src="events/cropstart.js"></script>
   <script src="events/cropmove.js"></script>
   <script src="events/cropend.js"></script>
-  <script src="events/change.js"></script>
+  <script src="events/crop.js"></script>
   <script src="events/zoom.js"></script>
 </body>
 </html>
