--- a/test/methods.html
+++ b/test/methods.html
@@ -25,6 +25,7 @@
   <script src="methods/disable.js"></script>
   <script src="methods/zoom.js"></script>
   <script src="methods/rotate.js"></script>
+  <script src="methods/scale.js"></script>
   <script src="methods/getData.js"></script>
   <script src="methods/setData.js"></script>
   <script src="methods/getImageData.js"></script>
