--- a/test/options.html
+++ b/test/options.html
@@ -16,7 +16,6 @@
   <script src="js/main.js"></script>
   <script src="options/aspectRatio.js"></script>
   <script src="options/data.js"></script>
-  <script src="options/crop.js"></script>
   <script src="options/strict.js"></script>
   <!-- <script src="options/checkImageOrigin.js"></script> -->
   <script src="options/background.js"></script>
@@ -28,6 +27,7 @@
   <script src="options/dragCrop.js"></script>
   <script src="options/movable.js"></script>
   <script src="options/rotatable.js"></script>
+  <script src="options/scalable.js"></script>
   <script src="options/zoomable.js"></script>
   <script src="options/mouseWheelZoom.js"></script>
   <script src="options/touchDragZoom.js"></script>
