--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery plugin, image cropping, front-end, frontend, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Cropper</title>
+  <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
   <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="../dist/cropper.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -87,6 +88,14 @@
             <input class="form-control" id="dataRotate" type="text" placeholder="rotate">
             <span class="input-group-addon">deg</span>
           </div>
+          <div class="input-group">
+            <label class="input-group-addon" for="dataScaleX">ScaleX</label>
+            <input class="form-control" id="dataScaleX" type="text" placeholder="scaleX">
+          </div>
+          <div class="input-group">
+            <label class="input-group-addon" for="dataScaleY">ScaleY</label>
+            <input class="form-control" id="dataScaleY" type="text" placeholder="scaleY">
+          </div>
         </div>
       </div>
     </div>
@@ -96,32 +105,74 @@
         <div class="btn-group">
           <button class="btn btn-primary" data-method="setDragMode" data-option="move" type="button" title="Move">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;setDragMode&quot;, &quot;move&quot;)">
-              <span class="icon icon-move"></span>
+              <span class="fa fa-arrows"></span>
             </span>
           </button>
           <button class="btn btn-primary" data-method="setDragMode" data-option="crop" type="button" title="Crop">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;setDragMode&quot;, &quot;crop&quot;)">
-              <span class="icon icon-crop"></span>
+              <span class="fa fa-crop"></span>
             </span>
           </button>
+        </div>
+
+        <div class="btn-group">
           <button class="btn btn-primary" data-method="zoom" data-option="0.1" type="button" title="Zoom In">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;zoom&quot;, 0.1)">
-              <span class="icon icon-zoom-in"></span>
+              <span class="fa fa-search-plus"></span>
             </span>
           </button>
           <button class="btn btn-primary" data-method="zoom" data-option="-0.1" type="button" title="Zoom Out">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;zoom&quot;, -0.1)">
-              <span class="icon icon-zoom-out"></span>
+              <span class="fa fa-search-minus"></span>
             </span>
           </button>
+        </div>
+
+        <div class="btn-group">
+          <button class="btn btn-primary" data-method="move" data-option="-10" data-second-option="0" type="button" title="Move Left">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;move&quot;, -10, 0)">
+              <span class="fa fa-arrow-left"></span>
+            </span>
+          </button>
+          <button class="btn btn-primary" data-method="move" data-option="10" data-second-option="0" type="button" title="Move Right">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;move&quot;, 10, 0)">
+              <span class="fa fa-arrow-right"></span>
+            </span>
+          </button>
+          <button class="btn btn-primary" data-method="move" data-option="0" data-second-option="-10" type="button" title="Move Up">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;move&quot;, 0, -10)">
+              <span class="fa fa-arrow-up"></span>
+            </span>
+          </button>
+          <button class="btn btn-primary" data-method="move" data-option="0" data-second-option="10" type="button" title="Move Down">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;move&quot;, 0, 10)">
+              <span class="fa fa-arrow-down"></span>
+            </span>
+          </button>
+        </div>
+
+        <div class="btn-group">
           <button class="btn btn-primary" data-method="rotate" data-option="-45" type="button" title="Rotate Left">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;rotate&quot;, -45)">
-              <span class="icon icon-rotate-left"></span>
+              <span class="fa fa-rotate-left"></span>
             </span>
           </button>
           <button class="btn btn-primary" data-method="rotate" data-option="45" type="button" title="Rotate Right">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;rotate&quot;, 45)">
-              <span class="icon icon-rotate-right"></span>
+              <span class="fa fa-rotate-right"></span>
+            </span>
+          </button>
+        </div>
+
+        <div class="btn-group">
+          <button class="btn btn-primary" data-method="scale" data-option="-1" data-second-option="1" data-flip="horizontal" type="button" title="Flip Horizontal">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;scale&quot;, -1, 1)">
+              <span class="fa fa-arrows-h"></span>
+            </span>
+          </button>
+          <button class="btn btn-primary" data-method="scale" data-option="1" data-second-option="-1" data-flip="vertical" type="button" title="Flip Vertical">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;scale&quot;, 1, -1)">
+              <span class="fa fa-arrows-v"></span>
             </span>
           </button>
         </div>
@@ -129,38 +180,44 @@
         <div class="btn-group">
           <button class="btn btn-primary" data-method="crop" type="button" title="Crop">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;crop&quot;)">
-              <span class="icon icon-ok"></span>
+              <span class="fa fa-check"></span>
             </span>
           </button>
           <button class="btn btn-primary" data-method="clear" type="button" title="Clear">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;clear&quot;)">
-              <span class="icon icon-remove"></span>
+              <span class="fa fa-remove"></span>
             </span>
           </button>
+        </div>
+
+        <div class="btn-group">
           <button class="btn btn-primary" data-method="disable" type="button" title="Disable">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;disable&quot;)">
-              <span class="icon icon-lock"></span>
+              <span class="fa fa-lock"></span>
             </span>
           </button>
           <button class="btn btn-primary" data-method="enable" type="button" title="Enable">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;enable&quot;)">
-              <span class="icon icon-unlock"></span>
+              <span class="fa fa-unlock"></span>
             </span>
           </button>
+        </div>
+
+        <div class="btn-group">
           <button class="btn btn-primary" data-method="reset" type="button" title="Reset">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;reset&quot;)">
-              <span class="icon icon-refresh"></span>
+              <span class="fa fa-refresh"></span>
             </span>
           </button>
           <label class="btn btn-primary btn-upload" for="inputImage" title="Upload image file">
             <input class="sr-only" id="inputImage" name="file" type="file" accept="image/*">
             <span class="docs-tooltip" data-toggle="tooltip" title="Import image with Blob URLs">
-              <span class="icon icon-upload"></span>
+              <span class="fa fa-upload"></span>
             </span>
           </label>
           <button class="btn btn-primary" data-method="destroy" type="button" title="Destroy">
             <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;destroy&quot;)">
-              <span class="icon icon-off"></span>
+              <span class="fa fa-power-off"></span>
             </span>
           </button>
         </div>
@@ -360,20 +417,26 @@
             </li>
             <li role="presentation">
               <label class="checkbox-inline">
+                <input type="checkbox" name="option" value="scalable" checked>
+                scalable
+              </label>
+            </li>
+            <li role="presentation">
+              <label class="checkbox-inline">
                 <input type="checkbox" name="option" value="zoomable" checked>
                 zoomable
               </label>
             </li>
             <li role="presentation">
               <label class="checkbox-inline">
-                <input type="checkbox" name="option" value="touchDragZoom" checked>
-                touchDragZoom
+                <input type="checkbox" name="option" value="mouseWheelZoom" checked>
+                mouseWheelZoom
               </label>
             </li>
             <li role="presentation">
               <label class="checkbox-inline">
-                <input type="checkbox" name="option" value="mouseWheelZoom" checked>
-                mouseWheelZoom
+                <input type="checkbox" name="option" value="touchDragZoom" checked>
+                touchDragZoom
               </label>
             </li>
             <li role="presentation">
