Apply tooltip for showing message

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,7 @@
   <title>Cropper</title>
   <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
   <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/css/tooltip.min.css" rel="stylesheet">
   <link href="../dist/cropper.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 
@@ -463,11 +464,9 @@
     </div>
   </div>
 
-  <!-- Alert -->
-  <div class="docs-alert"><span class="warning message"></span></div>
-
   <!-- Scripts -->
   <script src="../assets/js/jquery.min.js"></script>
+  <script src="../assets/js/tooltip.min.js"></script>
   <script src="../assets/js/bootstrap.min.js"></script>
   <script src="../dist/cropper.js"></script>
   <script src="js/main.js"></script>
