--- a/examples/crop-avatar/index.html
+++ b/examples/crop-avatar/index.html
@@ -8,9 +8,9 @@
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery, PHP, image cropping, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Crop Avatar - Cropper</title>
-  <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../../dist/cropper.min.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../dist/cropper.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -32,7 +32,7 @@
         <div class="modal-content">
           <form class="avatar-form" action="crop.php" enctype="multipart/form-data" method="post">
             <div class="modal-header">
-              <button class="close" data-dismiss="modal" type="button">&times;</button>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
               <h4 class="modal-title" id="avatar-modal-label">Change Avatar</h4>
             </div>
             <div class="modal-body">
@@ -40,10 +40,10 @@
 
                 <!-- Upload image and data -->
                 <div class="avatar-upload">
-                  <input class="avatar-src" name="avatar_src" type="hidden">
-                  <input class="avatar-data" name="avatar_data" type="hidden">
+                  <input type="hidden" class="avatar-src" name="avatar_src">
+                  <input type="hidden" class="avatar-data" name="avatar_data">
                   <label for="avatarInput">Local upload</label>
-                  <input class="avatar-input" id="avatarInput" name="avatar_file" type="file">
+                  <input type="file" class="avatar-input" id="avatarInput" name="avatar_file">
                 </div>
 
                 <!-- Crop and preview -->
@@ -61,26 +61,26 @@
                 <div class="row avatar-btns">
                   <div class="col-md-9">
                     <div class="btn-group">
-                      <button class="btn btn-primary" data-method="rotate" data-option="-90" type="button" title="Rotate -90 degrees">Rotate Left</button>
-                      <button class="btn btn-primary" data-method="rotate" data-option="-15" type="button">-15deg</button>
-                      <button class="btn btn-primary" data-method="rotate" data-option="-30" type="button">-30deg</button>
-                      <button class="btn btn-primary" data-method="rotate" data-option="-45" type="button">-45deg</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="-90" title="Rotate -90 degrees">Rotate Left</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="-15">-15deg</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="-30">-30deg</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="-45">-45deg</button>
                     </div>
                     <div class="btn-group">
-                      <button class="btn btn-primary" data-method="rotate" data-option="90" type="button" title="Rotate 90 degrees">Rotate Right</button>
-                      <button class="btn btn-primary" data-method="rotate" data-option="15" type="button">15deg</button>
-                      <button class="btn btn-primary" data-method="rotate" data-option="30" type="button">30deg</button>
-                      <button class="btn btn-primary" data-method="rotate" data-option="45" type="button">45deg</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="90" title="Rotate 90 degrees">Rotate Right</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="15">15deg</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="30">30deg</button>
+                      <button type="button" class="btn btn-primary" data-method="rotate" data-option="45">45deg</button>
                     </div>
                   </div>
                   <div class="col-md-3">
-                    <button class="btn btn-primary btn-block avatar-save" type="submit">Done</button>
+                    <button type="submit" class="btn btn-primary btn-block avatar-save">Done</button>
                   </div>
                 </div>
               </div>
             </div>
             <!-- <div class="modal-footer">
-              <button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div> -->
           </form>
         </div>
