--- a/demo/index.html
+++ b/demo/index.html
@@ -250,9 +250,10 @@
                 <h4 class="modal-title" id="getCroppedCanvasTitle">Cropped</h4>
               </div>
               <div class="modal-body"></div>
-              <!-- <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-              </div> -->
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <a class="btn btn-primary" id="download" download="cropped.png" href="javascript:void(0);">Download</a>
+              </div>
             </div>
           </div>
         </div><!-- /.modal -->
